[package]
name = "rssh"
version = "0.1.0"
edition = "2024"

[dependencies]
ssh2 = "0.9.5"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.100"
rand = "0.8"
colored = "3.0.0"
indicatif = "0.18.2"
openssl = { version = "0.10.74", features = ["vendored"] }
webpki-roots = "1.0.3"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
